# peterfan

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml  release.yml
apps/landing/: README.md  index.html  script.js  styles.css
assets/: AppIcon.icns
docs/: ARCHITECTURE.md  CLI.md  MACOS_DISTRIBUTION.md  RESEARCH.md  ROADMAP.md
packaging/: com.uulab.peterfan.daemon.plist  kr.co.uulab.peterfan.daemon.plist
packaging/homebrew/: peterfan.rb
scripts/: bundle-macos.sh  check-macos-release.sh  dmg-fix-gatekeeper.command  install-daemon-macos.sh  load-env.sh  make-dmg.sh  make-icns.sh  notarize-macos.sh  release-local-macos.sh  setup-macos-signing.sh  sign-macos.sh  smoke-test.sh  uninstall-daemon-macos.sh
tools/icongen/: Cargo.toml
tools/icongen/src/: main.rs
tools/license-keygen/: Cargo.toml
tools/license-keygen/src/: main.rs
