[package]
name = "peterfan-license-keygen"
version = "0.1.0"
edition = "2021"
description = "Generates PeterFan signing keypairs and issues license keys. Never shipped; excluded from the workspace."
publish = false

[dependencies]
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
